@@ -1,6 +1,11 @@
 2007-09-11  Danilo Šegan  <danilo@gnome.org>
 
+	* compare-releases.py: Support more releases.
+
+2007-09-11  Danilo Šegan  <danilo@gnome.org>
+
 	* compare-releases.py: Added script to compare releases.
+	Support more languages.
 
 2007-09-10  Daniel Nylander <po@danielnylander.se>
 
